--- a/fiap_5nett_tech.Application/fiap_5nett_tech.Application.csproj
+++ b/fiap_5nett_tech.Application/fiap_5nett_tech.Application.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\fiap_5nett_tech.Domain\fiap_5nett_tech.Domain.csproj" />
+      <ProjectReference Include="..\fiap_5nett_tech.Infrastructure\fiap_5nett_tech.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
