--- a/fiap_5nett_tech.Test/fiap_5nett_tech.Test.csproj
+++ b/fiap_5nett_tech.Test/fiap_5nett_tech.Test.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\fiap_5nett_tech.Domain\fiap_5nett_tech.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
